<resources>
    <string name="app_name">Afary</string>
    <string name="login">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_back">Welcome Back,</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="password">Password</string>
    <string name="email">Email Id</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="new_to_afry">New to AFARY? Join today!</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="next">Next</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="security_ans">Security answer</string>
    <string name="accept_genral_condition">I accept genral conditions of sale</string>
    <string name="accept_genral_condition_use">I Accept genral conditions of use</string>
    <string name="accept_privacy_policy">I Accept privacy policy</string>
    <string name="search">Search Product</string>
    <string-array name="city_array">
        <item>Select City</item>
        <item>City 1</item>
        <item>City 2</item>
        <item>City 3</item>
        <item>City 4</item>
    </string-array>
    <string-array name="number_of_rooms">
        <item>Select Number of Rooms</item>
        <item>1 Room</item>
        <item>2 Rooms</item>
        <item>3 Rooms</item>
        <item>more than 3 Rooms</item>
    </string-array>
    <string-array name="select_security_questions">
        <item>Select your security question</item>
        <item>Security Question 1</item>
        <item>Security Question 2</item>
        <item>Security Question 3</item>
        <item>Security Question 4</item>
    </string-array>
    <string-array name="house_category">
        <item>Select House Category</item>
        <item>Furnished or Simple</item>
        <item>Apartment</item>
        <item>Office</item>
        <item>American room</item>
        <item>Duplex</item>
        <item>Building</item>
        <item>Commercial Space</item>
        <item>House</item>
        <item>Studio</item>
        <item>Villa</item>
        <item>Trade Background
</item>
    </string-array>
    <string-array name="area_sq_meter">
        <item>Select Area</item>
        <item>500 sq. feet</item>
        <item>500 to 1000 sq. feet</item>
        <item>1000 to 1500 sq. feet</item>
        <item>above 1500 sq. feet</item>

    </string-array>
    <string-array name="budget">
        <item>Select Budget</item>
        <item>below $2000</item>
        <item>$2000 to $4000 </item>
        <item>$4000 to $8000</item>
        <item>above $8000</item>

    </string-array>
    <string-array name="immediate_required">
        <item>Immediate Required</item>
        <item>Within Month</item>
        <item>Immediate</item>
        <item>After one Month</item>


    </string-array>
    <string-array name="countries_array">
        <item>Select country</item>
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>American Samoa</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Anguilla</item>
        <item>Antarctica</item>
        <item>Antigua and Barbuda</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Aruba</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Belize</item>
        <item>Benin</item>
        <item>Bermuda</item>
        <item>Bhutan</item>
        <item>Bolivia</item>
        <item>Bosnia and Herzegovina</item>
        <item>Botswana</item>
        <item>Bouvet Island</item>
        <item>Brazil</item>
        <item>British Indian Ocean Territory</item>
        <item>British Virgin Islands</item>
        <item>Brunei</item>
        <item>Bulgaria</item>
        <item>Burkina Faso</item>
        <item>Burundi</item>
        <item>Cambodia</item>
        <item>Cameroon</item>
        <item>Canada</item>
        <item>Cape Verde</item>
        <item>Cayman Islands</item>
        <item>Central African Republic</item>
        <item>Chad</item>
        <item>Chile</item>
        <item>China</item>
        <item>Christmas Island</item>
        <item>Cocos (Keeling) Islands</item>
        <item>Colombia</item>
        <item>Comoros</item>
        <item>Congo</item>
        <item>Cook Islands</item>
        <item>Costa Rica</item>
        <item>Cote d\'Ivoire</item>
        <item>Croatia</item>
        <item>Cuba</item>
        <item>Cyprus</item>
        <item>Czech Republic</item>
        <item>Democratic Republic of the Congo</item>
        <item>Denmark</item>
        <item>Djibouti</item>
        <item>Dominica</item>
        <item>Dominican Republic</item>
        <item>East Timor</item>
        <item>Ecuador</item>
        <item>Egypt</item>
        <item>El Salvador</item>
        <item>Equatorial Guinea</item>
        <item>Eritrea</item>
        <item>Estonia</item>
        <item>Ethiopia</item>
        <item>Faeroe Islands</item>
        <item>Falkland Islands</item>
        <item>Fiji</item>
        <item>Finland</item>
        <item>Former Yugoslav Republic of Macedonia</item>
        <item>France</item>
        <item>French Guiana</item>
        <item>French Polynesia</item>
        <item>French Southern Territories</item>
        <item>Gabon</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item>Ghana</item>
        <item>Gibraltar</item>
        <item>Greece</item>
        <item>Greenland</item>
        <item>Grenada</item>
        <item>Guadeloupe</item>
        <item>Guam</item>
        <item>Guatemala</item>
        <item>Guinea</item>
        <item>Guinea-Bissau</item>
        <item>Guyana</item>
        <item>Haiti</item>
        <item>Heard Island and McDonald Islands</item>
        <item>Honduras</item>
        <item>Hong Kong</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iran</item>
        <item>Iraq</item>
        <item>Ireland</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Jamaica</item>
        <item>Japan</item>
        <item>Jordan</item>
        <item>Kazakhstan</item>
        <item>Kenya</item>
        <item>Kiribati</item>
        <item>Kuwait</item>
        <item>Kyrgyzstan</item>
        <item>Laos</item>
        <item>Latvia</item>
        <item>Lebanon</item>
        <item>Lesotho</item>
        <item>Liberia</item>
        <item>Libya</item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Macau</item>
        <item>Madagascar</item>
        <item>Malawi</item>
        <item>Malaysia</item>
        <item>Maldives</item>
        <item>Mali</item>
        <item>Malta</item>
        <item>Marshall Islands</item>
        <item>Martinique</item>
        <item>Mauritania</item>
        <item>Mauritius</item>
        <item>Mayotte</item>
        <item>Mexico</item>
        <item>Micronesia</item>
        <item>Moldova</item>
        <item>Monaco</item>
        <item>Mongolia</item>
        <item>Montenegro</item>
        <item>Montserrat</item>
        <item>Morocco</item>
        <item>Mozambique</item>
        <item>Myanmar</item>
        <item>Namibia</item>
        <item>Nauru</item>
        <item>Nepal</item>
        <item>Netherlands</item>
        <item>Netherlands Antilles</item>
        <item>New Caledonia</item>
        <item>New Zealand</item>
        <item>Nicaragua</item>
        <item>Niger</item>
        <item>Nigeria</item>
        <item>Niue</item>
        <item>Norfolk Island</item>
        <item>North Korea</item>
        <item>Northern Marianas</item>
        <item>Norway</item>
        <item>Oman</item>
        <item>Pakistan</item>
        <item>Palau</item>
        <item>Panama</item>
        <item>Papua New Guinea</item>
        <item>Paraguay</item>
        <item>Peru</item>
        <item>Philippines</item>
        <item>Pitcairn Islands</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Puerto Rico</item>
        <item>Qatar</item>
        <item>Reunion</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>Rwanda</item>
        <item>Sqo Tome and Principe</item>
        <item>Saint Helena</item>
        <item>Saint Kitts and Nevis</item>
        <item>Saint Lucia</item>
        <item>Saint Pierre and Miquelon</item>
        <item>Saint Vincent and the Grenadines</item>
        <item>Samoa</item>
        <item>San Marino</item>
        <item>Saudi Arabia</item>
        <item>Senegal</item>
        <item>Serbia</item>
        <item>Seychelles</item>
        <item>Sierra Leone</item>
        <item>Singapore</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Solomon Islands</item>
        <item>Somalia</item>
        <item>South Africa</item>
        <item>South Georgia and the South Sandwich Islands</item>
        <item>South Korea</item>
        <item>South Sudan</item>
        <item>Spain</item>
        <item>Sri Lanka</item>
        <item>Sudan</item>
        <item>Suriname</item>
        <item>Svalbard and Jan Mayen</item>
        <item>Swaziland</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Syria</item>
        <item>Taiwan</item>
        <item>Tajikistan</item>
        <item>Tanzania</item>
        <item>Thailand</item>
        <item>The Bahamas</item>
        <item>The Gambia</item>
        <item>Togo</item>
        <item>Tokelau</item>
        <item>Tonga</item>
        <item>Trinidad and Tobago</item>
        <item>Tunisia</item>
        <item>Turkey</item>
        <item>Turkmenistan</item>
        <item>Turks and Caicos Islands</item>
        <item>Tuvalu</item>
        <item>Virgin Islands</item>
        <item>Uganda</item>
        <item>Ukraine</item>
        <item>United Arab Emirates</item>
        <item>United Kingdom</item>
        <item>United States</item>
        <item>United States Minor Outlying Islands</item>
        <item>Uruguay</item>
        <item>Uzbekistan</item>
        <item>Vanuatu</item>
        <item>Vatican City</item>
        <item>Venezuela</item>
        <item>Vietnam</item>
        <item>Wallis and Futuna</item>
        <item>Western Sahara</item>
        <item>Yemen</item>
        <item>Yugoslavia</item>
        <item>Zambia</item>
        <item>Zimbabwe</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="article_delivery"><![CDATA[Article & Delivery]]></string>
    <string name="home_service">Home Services</string>
    <string name="medical_consultaion">Medical Consultation</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="car_service">Car Services</string>
    <string name="select_state">Select State</string>
    <string name="select_city">Select City</string>
    <string name="rent">Rent</string>
    <string name="buy">Buy</string>
    <string name="real_estate">Real Estate</string>
    <string name="pincode">Pincode</string>
    <string name="confirm">Confirm</string>
    <string name="select_location">Enter Location</string>
    <string name="select_date_time">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="enter_amount">Propose Amount</string>
    <string name="short_desc">Short Description</string>
    <string name="house_no">House Number</string>
    <string name="street">Street</string>
    <string name="submit">Submit</string>
</resources>