<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusable="false"
   android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:focusableInTouchMode="true"
    tools:context=".login.LoginActivity">
<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusableInTouchMode="true"
        android:animateLayoutChanges="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="60dp"
            android:padding="20dp"
            android:src="@drawable/logo_colored" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/welcome_back"
            android:textColor="@color/black"
            android:textSize="22dp"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/sign_in_to_continue"

            android:textColor="@color/black"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:background="@drawable/edittext_shadow"
            android:clickable="true"

            android:hint="@string/email"
            android:inputType="none"
            android:singleLine="true"
            android:minHeight="38dp"
            android:padding="20dp"
            android:textSize="14dp">

        </EditText>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:background="@drawable/rectangle_background"

            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="38dp"
            android:singleLine="true"
            android:padding="20dp"
            android:textSize="14dp">

        </EditText>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_round_colored"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="60dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_pass"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/register"
                android:textColor="@color/button_round_blue" />
        </RelativeLayout>


    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
</LinearLayout>