<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".user.home_services.ElectricianRequestActivity">
    <include
        android:id="@+id/toolbar"
        layout="@layout/cust_toolbar"

        ></include>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_margin="10dp"
        android:orientation="vertical">

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/home_service"
    android:padding="10dp"
    android:gravity="center"
    android:textColor="@color/black"
    android:textSize="17dp"
    />
        <TextView
            android:id="@+id/tv_service_name"
            android:gravity="center"
            android:maxLines="1"
            android:ellipsize="end"
            android:ems="3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />
        <AutoCompleteTextView
            android:id="@+id/et_address"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:hint="@string/select_location"
            android:textSize="14dp"
            android:padding="10dp"
            android:background="@drawable/edittext_shadow"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <EditText
                android:id="@+id/et_house"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:hint="@string/house_no"
                android:textSize="14dp"
                android:padding="10dp"
                android:enabled="true"
                android:editable="true"
                android:layout_weight="0.5"
                android:background="@drawable/edittext_shadow"
                />
            <EditText
                android:id="@+id/et_street"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:hint="@string/street"
                android:enabled="true"
                android:editable="true"
                android:textSize="14dp"
                android:padding="10dp"
                android:layout_weight="0.5"
                android:background="@drawable/edittext_shadow"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <EditText
                android:id="@+id/et_date"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:hint="@string/select_date_time"

                android:focusable="false"
                android:focusableInTouchMode="true"
                android:clickable="true"
                android:textSize="14dp"
                android:padding="10dp"

                android:layout_weight="0.5"
                android:background="@drawable/edittext_shadow"
                />
            <EditText
                android:id="@+id/et_time"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:hint="@string/select_time"
                android:textSize="14dp"
                android:focusable="false"
                android:focusableInTouchMode="true"
                android:clickable="true"
                android:padding="10dp"
                android:layout_weight="0.5"
                android:background="@drawable/edittext_shadow"
                />
        </LinearLayout>

        <EditText
            android:id="@+id/et_amount"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_amount"
            android:textSize="14dp"
            android:padding="10dp"
            android:inputType="number"
            android:background="@drawable/edittext_shadow"
            />
        <EditText
            android:id="@+id/et_desc"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:hint="@string/short_desc"
            android:textSize="14dp"
            android:padding="10dp"

            android:background="@drawable/edittext_shadow"
            />
        <Button
            android:id="@+id/btn_submit"
         android:text="@string/submit"
            android:textColor="@color/white"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_round_colored"
            />
    </LinearLayout>

</RelativeLayout>