<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"

    android:focusable="false"
    android:focusableInTouchMode="true"
    tools:context=".user.UserSignUpActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/splash_gradient">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="25dp"
                android:src="@drawable/afary_logo_white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:text="@string/new_to_afry"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_f_name"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/edittext_shadow"
                android:hint="@string/first_name"
                android:padding="20dp"
                android:clickable="true"

                android:textSize="14dp" />

            <EditText
                android:id="@+id/et_last_name"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:clickable="true"

                android:background="@drawable/rectangle_background"
                android:hint="@string/last_name"
                android:padding="20dp"
                android:textSize="14dp" />

            <EditText
                android:id="@+id/et_mobile_no"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/mobile_number"
                android:inputType="phone"
                android:padding="20dp"
                android:background="@drawable/rectangle_background"
                android:clickable="true"

                android:textSize="14dp" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="20dp"
                android:clickable="true"
                android:background="@drawable/rectangle_background"

                android:textSize="14dp" />



            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="20dp"
                android:clickable="true"

                android:background="@drawable/rectangle_background"
                android:textSize="14dp" />

            <EditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:inputType="textPassword"
                android:hint="@string/confirm_password"
                android:padding="20dp"
                android:clickable="true"
                android:background="@drawable/rectangle_background"

                android:textSize="14dp" />

            <LinearLayout
                android:id="@+id/ll_country_spinner"
                android:layout_width="match_parent"
                android:background="@drawable/rectangle_background"
                android:layout_height="60dp">
                <Spinner
                    android:id="@+id/sp_country"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"></Spinner>

            </LinearLayout>
            <Button
                android:id="@+id/btn_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/btn_round_colored"
                android:text="@string/next"
                android:textAllCaps="false"
                android:layout_marginTop="10dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:textColor="@color/white"

                />
</LinearLayout>
</LinearLayout>
    </ScrollView>

</LinearLayout>

</RelativeLayout>