<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".user.home_services.HouseServiceActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/custom_toolbar"></include>

        <EditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edittext_shadow"
            android:clickable="true"
            android:drawableRight="@drawable/search"
            android:editable="false"
            android:hint="@string/search"
            android:padding="15dp"
            android:textSize="14dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical"

                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/home_service"
                    android:textColor="@color/black"
                    android:textSize="18dp"

                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/real_estate"
                    android:textColor="@color/black"
                    android:textSize="13dp"

                    />

                <RadioGroup
                    android:id="@+id/rg_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal"

                    >

                    <RadioButton
                        android:id="@+id/rb_rent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:text="@string/rent"
                        android:textAllCaps="true" />

                    <RadioButton
                        android:id="@+id/rb_buy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/buy"
                        android:textAllCaps="true" />
                </RadioGroup>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext_shadow">

                    <Spinner
                        android:id="@+id/sp_house_category"
                        android:layout_width="match_parent"
                        android:layout_height="36dp"></Spinner>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edittext_shadow"
                    android:layout_marginTop="10dp">
                    <Spinner
                        android:id="@+id/sp_no_rooms"
                        android:layout_width="match_parent"
                        android:layout_height="36dp"></Spinner>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edittext_shadow"
                    android:layout_marginTop="10dp">
                    <Spinner
                        android:id="@+id/sp_area"
                        android:layout_width="match_parent"
                        android:layout_height="36dp"></Spinner>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edittext_shadow"
                    android:layout_marginTop="10dp">
                    <Spinner
                        android:id="@+id/sp_budget"
                        android:layout_width="match_parent"
                        android:layout_height="36dp"></Spinner>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edittext_shadow"
                    android:layout_marginTop="10dp">
                    <Spinner
                        android:id="@+id/sp_immediate"
                        android:layout_width="match_parent"
                        android:layout_height="36dp"></Spinner>
                </LinearLayout>

                   <EditText
                       android:id="@+id/et_state"
                       android:layout_width="match_parent"
                       android:layout_height="50dp"
                       android:layout_marginTop="10dp"
                       android:hint="@string/select_state"
                       android:textSize="14dp"
                       android:padding="10dp"
                       android:background="@drawable/edittext_shadow"
                       />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">
                    <EditText
                        android:id="@+id/et_city"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"

                        android:hint="@string/select_city"
                        android:textSize="14dp"
                        android:layout_weight="0.5"
                        android:padding="10dp"
                        android:background="@drawable/edittext_shadow"
                        />
                    <EditText
                        android:id="@+id/et_pincode"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                      android:inputType="number"
                        android:hint="@string/pincode"
                        android:textSize="14dp"
                        android:padding="10dp"
                        android:layout_weight="0.5"
                        android:background="@drawable/edittext_shadow"
                        />
                </LinearLayout>

                <Button
                    android:id="@+id/btn_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="@string/confirm"
                    android:textColor="@color/white"
                    android:background="@drawable/btn_round_colored"
                    />
            </LinearLayout>

        </ScrollView>

    </LinearLayout>
</RelativeLayout>